SAP-HANA-AWS-CFT/SAP-HANA-BaseNetwork.template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "(0007) AWS Infrastructure Deployment for SAP HANA",
    "Parameters": {
        
        "AvailabilityZone": {
            "Description": "Choose the AvailabilityZone where HANA Subnets will be created",
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1a"
        },
        "VPC": {
            "Description": "VPC id where HANA nodes will be deployed.",
            "Type": "String"
        },
        "InternetGateway": {
            "Description": "InternetGateway within VPC through which traffic flows.",
            "Type": "String"
        },
        "RemoteAccessCIDR": {
            "Description": "IP CIDR from which you are likely to RDP into the instance. You can add rules later by modifying the created security groups e.g. 54.32.98.160/32.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
        },
        "KeyName": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Description": "Name of an existing EC2 KeyPair. RDP instance will launch with this KeyPair."
        },
        "BASTIONInstanceType": {
            "Description": "Amazon EC2 instance type for the BASTION Host.",
            "Type": "String",
            "Default": "t2.small"
        }
    },
    
    "Resources": {
        "HANASubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock":"10.0.1.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "HANA"
                    },
                    {
                        "Key": "Name",
                        "Value": "Private Subnet - HANA"
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ],
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone"
                }
            }
        },
        "DMZSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock":"10.0.2.0/24",
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "BASTION and RDP"
                    },
                    {
                        "Key": "Name",
                        "Value": "Public Subnet - HANA"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ],
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone"
                }
            }
        },
        "BASTIONInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Bastion Instance (Public Subnet)"
                    }
                ],
                "InstanceType": "t2.small",
                "NetworkInterfaces": [
                    {
                        "NetworkInterfaceId": {
                            "Ref": "BASTIONInterface"
                        },
                        "DeviceIndex": "0"
                    }
                ],
                "ImageId":"ami-0e2ff28bfb72a4e45"
            }
        },
        "BASTIONEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            }
        },
        "BASTIONInterface": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SubnetId": {
                    "Ref": "DMZSubnet"
                },
                "Description": "External interface for the BASTION Host",
                "GroupSet": [
                    {
                        "Ref": "BASTIONSecurityGroup"
                    }
                ],
                "SourceDestCheck": "false",
                "Tags": [
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "AssociateInterfaceBASTION": {
            "Type": "AWS::EC2::EIPAssociation",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "BASTIONEIP",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "BASTIONInterface"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "7e0fa2fb-f070-4859-96e4-186792dc1fde"
                }
            }
        },
        "BASTIONSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable internal access to the BASTION host",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "PrivSubCIDR"
                        }
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "52b083c0-8813-460d-9065-db7d0652cc2d"
                }
            }
        },
        "NATGWYEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a533a3ed-7e17-4127-b18d-54e8701c60a6"
                }
            }
        },
        "NATGateway1": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NATGWYEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "DMZSubnet"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "fdff47cb-6a89-47d7-b913-c2d27fd6d653"
                }
            }
        },
        "RDPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "RDP Instance security group",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "3389",
                        "ToPort": "3389",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1",
                        "ToPort": "65535",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "fa4c3919-5b92-4b83-9703-b4a1f1f6e5ca"
                }
            }
        },
        "HANARouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "HANA"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "cc0c00b7-ff53-4163-b11b-df38a4aaecc0"
                }
            }
        },
        "DMZRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": "NAT GW"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "fc1c2257-203a-4ea5-a24a-7db4871a3418"
                }
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "b8f633d8-8426-4ba9-99fc-f3bacf2d75c6"
                }
            }
        },
        "HanaRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "HANARouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway1"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "f967de15-ff41-4ce6-8130-2cdb20f819a7"
                }
            }
        },
        "PublicNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "1fab399d-c8b1-454d-8772-2fa4081e37d7"
                }
            }
        },
        "HanaSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "HANASubnet"
                },
                "RouteTableId": {
                    "Ref": "HANARouteTable"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "82b988aa-2287-4f79-9087-b87c7199ae33"
                }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "DMZSubnet"
                },
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "fae6fb05-1913-434b-a5bc-256467c455be"
                }
            }
        },
        "InboundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "0",
                    "To": "65535"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "d234e958-5de6-4462-b5fc-41a0d5db3955"
                }
            }
        },
        "OutBoundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "6",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0",
                "PortRange": {
                    "From": "0",
                    "To": "65535"
                }
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "08e78ef9-0617-4afd-a26d-6847fa3964e3"
                }
            }
        }
    }
}
